@@ -155,6 +155,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        -Djdk.instrument.traceUsage=false
+                        -XX:+EnableDynamicAgentLoading
+                    </argLine>
+                </configuration>
                 <version>3.2.2</version>
             </plugin>
             
